--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -436,10 +436,25 @@ hr.star-dark:after {
     color: #F4661F;
 }
 
+/*----------- CONTACT PAGE ----------- */
+.see-movies{
+    border-color: #F4661F;
+    color: #F4661F;
+}
+
+.see-movies:hover{
+    border-color: #F4661F;
+    background-color: #F4661F;
+    color: white;
+}
+
 /*----------- ABOUT PAGE ----------- */
 .about_img{
-    background-image: url("../images/002.jpg");
+    width: 100%;
+    margin-top: 1.5rem;
 }
+
+/*----------- FAQ PAGE ----------- */
 
 .faq-nav .nav-link1:hover {
     background-color: #F4661F;
@@ -451,8 +466,6 @@ hr.star-dark:after {
     font-weight: 700;
     color: white;
 }
-
-/*----------- FAQ PAGE ----------- */
 .faq_content{
     margin-top: 3%;
 }
@@ -530,4 +543,19 @@ hr.star-dark:after {
 
 .collapse.show .card-body {
     border-bottom: 1px solid rgba(0, 0, 0, .125);
+}
+
+/*----------- MOVIE PAGE ----------- */
+.movie_img{
+    width: 100%;
+    margin-top: 1.5rem;
+}
+
+/*----------- EMPLOYEE PAGE ----------- */
+.employee_btn{
+    margin-top: 1.5rem;
+}
+
+.employee_btn a{
+    margin-top: 1rem;
 }
