--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -303,7 +303,7 @@
 <!--end movie container-->
 
 <div class="text-center">
-    <a href="#" style="border-radius: 5px;" class="btn btn-outline-warning  see-movies">See all movies</a>
+    <a th:href="@{/movies}" style="border-radius: 5px;" class="btn btn-outline-warning  see-movies">See all movies</a>
 </div>
 
 <!--Insert footer fragment-->
