--- a/src/main/resources/templates/movie.html
+++ b/src/main/resources/templates/movie.html
@@ -24,6 +24,81 @@
 <!--Insert header fragment-->
 <div th:insert="~{/fragments/header :: header}"></div>
 
+<div class="container">
+<section class="mb-4">
+    <!--Section heading-->
+    <div class="col-md-12">
+        <h2 class="h1-responsive font-weight-bold text-center my-4">Movie Titile</h2>
+        <div class="row">
+
+            <div class="col-md-6">
+                <img class="movie_img" th:src="@{/images/002.jpg}">
+                <div class="movie_img"></div>
+            </div>
+
+            <div class="col-md-6">
+                <h2 class="h1-responsive font-weight-bold text-center my-4">Description</h2>
+                <!--Section description-->
+                <p class="text-center w-responsive mx-auto mb-5">After the devastating events of Avengers:
+                    Infinity War (2018), the universe is in ruins. With the help of remaining allies,
+                    the Avengers assemble once more in order to
+                    undo Thanos' actions and restore order to the universe.
+                </p>
+            </div>
+
+        </div>
+    </div>
+
+    <h4 class="h1-responsive font-weight-bold text-center my-4">Trailer</h4>
+    <div class="row">
+        <div class="col-md-12">
+            <video class="col-md-12" th:src="@{https://www.youtube.com/watch#3Fv=TcMBFSGVi1c}" type="video/mp4"></video>
+        </div>
+        <div class="col-md-12">
+            <div class="movie-info">
+                <div class="info-section" style="text-align: center">
+                    <label>Release Date</label>
+                    <span>Tue 4 July</span>
+                </div>
+                <!--date,time-->
+                <div class="info-section">
+                    <label>Genre</label>
+                    <span>Action</span>
+                </div>
+                <!--screen-->
+                <div class="info-section">
+                    <label>Language</label>
+                    <span>EN</span>
+                </div>
+                <!--row-->
+                <div class="info-section">
+                    <label>Duration</label>
+                    <span>241 min</span>
+                </div>
+                <div class="info-section">
+                    <label>TYPE</label>
+                    <span>2D</span>
+                </div>
+                <!--seat-->
+            </div>
+        </div>
+    </div>
+</section>
+
+<div class="row">
+    <div class="col-md-12">
+        <div class="form-group">
+            <div class="input-group date" id="datetimepicker2" data-target-input="nearest">
+                <input type="text" class="form-control datetimepicker-input" data-target="#datetimepicker2"/>
+                <div class="input-group-append" data-target="#datetimepicker2" data-toggle="datetimepicker">
+                    <div class="input-group-text"><i class="fa fa-calendar"></i></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+</div>
 
 <!--Insert footer fragment-->
 <div th:insert="~{/fragments/footer :: footer}"></div>
