--- a/src/main/resources/templates/plan-movie-page.html
+++ b/src/main/resources/templates/plan-movie-page.html
@@ -20,7 +20,7 @@
     <link th:href="@{/css/style.css}" href="/static/css/style.css" rel="stylesheet" type="text/css"/>
 
     <!-- Page Title -->
-    <title>Bio Trio Cinema | Contact</title>
+    <title>Bio Trio Cinema | Add Movie</title>
 </head>
 <body>
 <!--Insert header fragment-->
@@ -31,15 +31,11 @@
     <section class="mb-4">
 
         <!--Section heading-->
-        <h2 class="h1-responsive font-weight-bold text-center my-4">Contact us</h2>
-        <!--Section description-->
-        <p class="text-center w-responsive mx-auto mb-5">Do you have any questions? Please do not hesitate to contact us directly. Our team will come back to you within
-            a matter of hours to help you.</p>
-
+        <h2 class="h1-responsive font-weight-bold text-center my-4">Add movie</h2>
         <div class="row contact_form">
 
             <!--Grid column-->
-            <div class="col-md-9 mb-md-0 mb-5">
+            <div class="col-md-12 mb-md-0 mb-5">
                 <form id="contact-form" name="contact-form" action="mail.php" method="POST">
 
                     <!--Grid row-->
@@ -48,17 +44,17 @@
                         <!--Grid column-->
                         <div class="col-md-6" style="margin-bottom: 2%">
                             <div class="md-form mb-0">
-                                <label for="name" class="">Your name</label>
-                                <input type="text" id="name" name="name" class="form-control">
+                                <label for="movie-plan-id" class="">Movie plan ID</label>
+                                <input type="text" id="movie-plan-id" name="name" class="form-control">
                             </div>
                         </div>
                         <!--Grid column-->
 
                         <!--Grid column-->
-                        <div class="col-md-6">
+                        <div class="col-md-6" style="margin-bottom: 2%">
                             <div class="md-form mb-0">
-                                <label for="email" class="">Your email</label>
-                                <input type="text" id="email" name="email" class="form-control">
+                                <label for="movie-id" class="">Movie ID</label>
+                                <input type="text" id="movie-id" name="name" class="form-control">
                             </div>
                         </div>
                         <!--Grid column-->
@@ -68,59 +64,60 @@
 
                     <!--Grid row-->
                     <div class="row">
-                        <div class="col-md-12">
+
+                        <!--Grid column-->
+                        <div class="col-md-6" style="margin-bottom: 2%">
                             <div class="md-form mb-0">
-                                <label for="subject" class="">Subject</label>
-                                <input type="text" id="subject" name="subject" class="form-control">
+                                <label for="teather-room-id" class="">Teather room ID</label>
+                                <input type="text" id="teather-room-id" name="name" class="form-control">
                             </div>
                         </div>
+                        <!--Grid column-->
+
+                        <!--Grid column-->
+                        <div class="col-md-6" style="margin-bottom: 2%">
+                            <div class="md-form mb-0">
+                                <label for="date" class="">Date</label>
+                                <input class="form-control" id="date" type="date" value="2017-06-01">
+                            </div>
+                        </div>
+                        <!--Grid column-->
+
                     </div>
                     <!--Grid row-->
 
-                    <!--Grid row-->
                     <div class="row">
 
                         <!--Grid column-->
-                        <div class="col-md-12">
-
-                            <div class="md-form" style="margin-bottom: 2%; margin-top: 2%">
-                                <label for="message">Your message</label>
-                                <textarea type="text" id="message" name="message" rows="2" class="form-control md-textarea"></textarea>
+                        <div class="col-md-6" style="margin-bottom: 2%">
+                            <div class="md-form mb-0">
+                                <label for="time" class="">Time</label>
+                                <input class="form-control" id="time" type="time">
                             </div>
-
                         </div>
+                        <!--Grid column-->
+
+                        <!--Grid column-->
+                        <div class="col-md-6" style="margin-bottom: 2%">
+                            <div class="md-form mb-0">
+                                <label for="price" class="">Price</label>
+                                <input class="form-control" id="price" type="text">
+                            </div>
+                        </div>
+                        <!--Grid column-->
+
                     </div>
-                    <!--Grid row-->
 
                 </form>
 
                 <div class="text-center text-md-left">
                     <button class="see-movies btn btn-outline-warning">
-                    <a onclick="document.getElementById('contact-form').submit();">Send</a>
+                        <a onclick="document.getElementById('contact-form').submit();">Save</a>
                     </button>
                 </div>
                 <div class="status"></div>
             </div>
             <!--Grid column-->
-
-            <!--Grid column-->
-            <div class="col-md-3 text-center">
-                <ul class="list-unstyled mb-0">
-                    <li><i class="fas fa-map-marker-alt fa-2x"></i>
-                        <p>Lygten 37, 2400 København</p>
-                    </li>
-
-                    <li><i class="fas fa-phone mt-4 fa-2x"></i>
-                        <p>25 51 31 21</p>
-                    </li>
-
-                    <li><i class="fas fa-envelope mt-4 fa-2x"></i>
-                        <p>contact@biotrio.com</p>
-                    </li>
-                </ul>
-            </div>
-            <!--Grid column-->
-
         </div>
 
     </section>
@@ -136,5 +133,13 @@
         crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+<script>var dateControl = document.querySelector('input[type="date"]');
+dateControl.value = '2017-06-01';</script>
+<script>var timeControl = document.querySelector('input[type="time"]');
+timeControl.value = '00:00';</script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.1/js/tempusdominus-bootstrap-4.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.1/css/tempusdominus-bootstrap-4.min.css"/>
 </body>
 </html>
