Add Movie Page Form Add Movie Page in Movie Controller

--- a/src/main/resources/templates/add-movie-page.html
+++ b/src/main/resources/templates/add-movie-page.html
@@ -148,7 +148,7 @@
 
                 </form>
 
-                <div class="text-center text-md-left">
+                <div class="text-center">
                     <button class="see-movies btn btn-outline-warning">
                         <a onclick="document.getElementById('contact-form').submit();">Save</a>
                     </button>
