--- a/src/main/resources/templates/control-panel.html
+++ b/src/main/resources/templates/control-panel.html
@@ -25,8 +25,31 @@
 <div th:insert="~{/fragments/header :: header}"></div>
 
 <!-- Page content here -->
-<div class="container" style="min-height:100vh">
-CONTROL PANEL PAGE
+<div class="container">
+    <div class="box">
+        <div class="container">
+            <div class="row">
+
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+
+                    <div class="box-part text-center">
+
+                        <i class="fas fa-film fa-2x" aria-hidden="true"></i>
+
+                        <div class="title">
+                            <h3>Movies</h3>
+                        </div>
+                        <hr>
+                        <a th:href="@{/}">See Movies</a>
+                        <a th:href="@{/}">Create Movie</a>
+                        <a th:href="@{/}">Delete Movie</a>
+                        <a th:href="@{/}">Edit Movie</a>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 
