--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -24,7 +24,7 @@
 
 <!--Insert header fragment-->
 <div th:insert="~{/fragments/header :: header}"></div>
-<h4 align="center">Search results for '<span th:text="${searchtext}">Searched Text</span>'.</h4>
+<h4 align="center" class="search-result-text">Search results for '<span th:text="${searchtext}">Searched Text</span>'.</h4>
 <!--start movie container-->
 <div class="container container-movies">
 
