add movie working

--- a/src/main/resources/templates/delete-movie.html
+++ b/src/main/resources/templates/delete-movie.html
@@ -20,7 +20,7 @@
     <link th:href="@{/css/style.css}" href="/static/css/style.css" rel="stylesheet" type="text/css"/>
 
     <!-- Page Title -->
-    <title>Bio Trio Cinema | Add Movie</title>
+    <title>Bio Trio Cinema | Delete Movie</title>
 </head>
 <body>
 <!--Insert header fragment-->
@@ -31,7 +31,7 @@
     <section class="mb-4">
 
         <!--Section heading-->
-        <h2 class="h1-responsive font-weight-bold text-center my-4">Add movie</h2>
+        <h2 class="h1-responsive font-weight-bold text-center my-4">Delete movie</h2>
         <div class="row contact_form">
 
             <!--Grid column-->
