--- a/src/main/resources/templates/add-movie-page.html
+++ b/src/main/resources/templates/add-movie-page.html
@@ -36,7 +36,7 @@
 
             <!--Grid column-->
             <div class="col-md-12 mb-md-0 mb-5">
-                <form th:action="'/save-movie'" method="post" th:object="${movieForm}">
+                <form th:action="@{'/save-movie'}" method="post" th:object="${movieForm}">
 
                     <!--Grid row-->
                     <div class="row">
@@ -69,7 +69,7 @@
                         <div class="col-md-6" style="margin-bottom: 2%">
                             <div class="md-form mb-0">
                                 <label for="release-date1" class="">Release date</label>
-                                <input th:field="${movieForm.movieDetails.release_date}" class="form-control" id="release-date1" type="date" value="2017-06-01">
+                                <input name="release-date" class="form-control" id="release-date1" type="date" value="2017-06-01">
                             </div>
                         </div>
                         <!--Grid column-->
@@ -169,8 +169,6 @@
         crossorigin="anonymous"></script>
 <script>var dateControl = document.querySelector('input[type="date"]');
 dateControl.value = '2017-06-01';</script>
-<script>var timeControl = document.querySelector('input[type="time"]');
-timeControl.value = '00:00';</script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.1/js/tempusdominus-bootstrap-4.min.js"></script>
