--- a/src/main/resources/templates/movie.html
+++ b/src/main/resources/templates/movie.html
@@ -53,7 +53,7 @@
         </div>
         <div class="col-md-12">
             <div class="movie-info">
-                <!--release date-->
+                <!--release date_time-->
                 <div class="info-section" style="text-align: center">
                     <label>Release Date</label>
                     <span th:text="${movie.movieDetails.release_date}"></span>
@@ -86,7 +86,7 @@
 <div class="row">
     <div class="col-md-12">
         <div class="form-group">
-            <div class="input-group date" id="datetimepicker2" data-target-input="nearest">
+            <div class="input-group date_time" id="datetimepicker2" data-target-input="nearest">
                 <input type="text" class="form-control datetimepicker-input" data-target="#datetimepicker2"/>
                 <div class="input-group-append" data-target="#datetimepicker2" data-toggle="datetimepicker">
                     <div class="input-group-text"><i class="fa fa-calendar"></i></div>
