--- a/src/main/resources/templates/plan-movie-page.html
+++ b/src/main/resources/templates/plan-movie-page.html
@@ -77,8 +77,8 @@
                         <!--Grid column-->
                         <div class="col-md-6" style="margin-bottom: 2%">
                             <div class="md-form mb-0">
-                                <label for="date" class="">Date</label>
-                                <input class="form-control" id="date" type="date" value="2017-06-01">
+                                <label for="date_time" class="">Date</label>
+                                <input class="form-control" id="date_time" type="date_time" value="2017-06-01">
                             </div>
                         </div>
                         <!--Grid column-->
@@ -133,7 +133,7 @@
         crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-<script>var dateControl = document.querySelector('input[type="date"]');
+<script>var dateControl = document.querySelector('input[type="date_time"]');
 dateControl.value = '2017-06-01';</script>
 <script>var timeControl = document.querySelector('input[type="time"]');
 timeControl.value = '00:00';</script>
