--- a/src/main/resources/templates/add-movie-page.html
+++ b/src/main/resources/templates/add-movie-page.html
@@ -68,8 +68,8 @@
                         <!--Grid column-->
                         <div class="col-md-6" style="margin-bottom: 2%">
                             <div class="md-form mb-0">
-                                <label for="release-date1" class="">Release date</label>
-                                <input name="release-date" class="form-control" id="release-date1" type="date" value="2017-06-01">
+                                <label for="release-date1" class="">Release date_time</label>
+                                <input name="release-date_time" class="form-control" id="release-date1" type="date_time" value="2017-06-01">
                             </div>
                         </div>
                         <!--Grid column-->
@@ -167,7 +167,7 @@
         crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-<script>var dateControl = document.querySelector('input[type="date"]');
+<script>var dateControl = document.querySelector('input[type="date_time"]');
 dateControl.value = '2017-06-01';</script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
