--- a/src/main/resources/templates/movies.html
+++ b/src/main/resources/templates/movies.html
@@ -52,7 +52,7 @@
                     <label>Release Date</label>
                     <span>Tue 4 July</span>
                 </div>
-                <!--date,time-->
+                <!--date_time,time-->
                 <div class="info-section">
                     <label>Genre</label>
                     <span>Action</span>
@@ -95,7 +95,7 @@
                     <label>Release Date</label>
                     <span>Tue 4 July</span>
                 </div>
-                <!--date,time-->
+                <!--date_time,time-->
                 <div class="info-section">
                     <label>Genre</label>
                     <span>Action</span>
@@ -138,7 +138,7 @@
                     <label>Release Date</label>
                     <span>Tue 4 July</span>
                 </div>
-                <!--date,time-->
+                <!--date_time,time-->
                 <div class="info-section">
                     <label>Genre</label>
                     <span>Action</span>
@@ -181,7 +181,7 @@
                     <label>Release Date</label>
                     <span>Tue 4 July</span>
                 </div>
-                <!--date,time-->
+                <!--date_time,time-->
                 <div class="info-section">
                     <label>Genre</label>
                     <span>Action</span>
@@ -224,7 +224,7 @@
                     <label>Release Date</label>
                     <span>Tue 4 July</span>
                 </div>
-                <!--date,time-->
+                <!--date_time,time-->
                 <div class="info-section">
                     <label>Genre</label>
                     <span>Action</span>
@@ -267,7 +267,7 @@
                     <label>Release Date</label>
                     <span>Tue 4 July</span>
                 </div>
-                <!--date,time-->
+                <!--date_time,time-->
                 <div class="info-section">
                     <label>Genre</label>
                     <span>Action</span>
@@ -310,7 +310,7 @@
                     <label>Release Date</label>
                     <span>Tue 4 July</span>
                 </div>
-                <!--date,time-->
+                <!--date_time,time-->
                 <div class="info-section">
                     <label>Genre</label>
                     <span>Action</span>
@@ -353,7 +353,7 @@
                     <label>Release Date</label>
                     <span>Tue 4 July</span>
                 </div>
-                <!--date,time-->
+                <!--date_time,time-->
                 <div class="info-section">
                     <label>Genre</label>
                     <span>Action</span>
@@ -396,7 +396,7 @@
                     <label>Release Date</label>
                     <span>Tue 4 July</span>
                 </div>
-                <!--date,time-->
+                <!--date_time,time-->
                 <div class="info-section">
                     <label>Genre</label>
                     <span>Action</span>
@@ -439,7 +439,7 @@
                     <label>Release Date</label>
                     <span>Tue 4 July</span>
                 </div>
-                <!--date,time-->
+                <!--date_time,time-->
                 <div class="info-section">
                     <label>Genre</label>
                     <span>Action</span>
@@ -482,7 +482,7 @@
                     <label>Release Date</label>
                     <span>Tue 4 July</span>
                 </div>
-                <!--date,time-->
+                <!--date_time,time-->
                 <div class="info-section">
                     <label>Genre</label>
                     <span>Action</span>
@@ -525,7 +525,7 @@
                     <label>Release Date</label>
                     <span>Tue 4 July</span>
                 </div>
-                <!--date,time-->
+                <!--date_time,time-->
                 <div class="info-section">
                     <label>Genre</label>
                     <span>Action</span>
@@ -568,7 +568,7 @@
                     <label>Release Date</label>
                     <span>Tue 4 July</span>
                 </div>
-                <!--date,time-->
+                <!--date_time,time-->
                 <div class="info-section">
                     <label>Genre</label>
                     <span>Action</span>
@@ -611,7 +611,7 @@
                     <label>Release Date</label>
                     <span>Tue 4 July</span>
                 </div>
-                <!--date,time-->
+                <!--date_time,time-->
                 <div class="info-section">
                     <label>Genre</label>
                     <span>Action</span>
@@ -654,7 +654,7 @@
                     <label>Release Date</label>
                     <span>Tue 4 July</span>
                 </div>
-                <!--date,time-->
+                <!--date_time,time-->
                 <div class="info-section">
                     <label>Genre</label>
                     <span>Action</span>
